# gpie-inference

./: .coverage  CHANGELOG.md  README.md  pyproject.toml  requirements-optional.txt  requirements.txt
.github/workflows/: tests.yml
examples/notebooks/: coded_diffraction_pattern_demo.ipynb  compressed_sensing_demo.ipynb  holography_demo.ipynb  random_structured_cdi_demo.ipynb
examples/scripts/: readme.md
examples/scripts/coded_diffraction_pattern/: coded_diffraction_pattern.py  sequential_vs_parallel.py
examples/scripts/compressed_sensing/: compressed_sensing.py
examples/scripts/holography/: holography.py
examples/scripts/random_structured_cdi/: random_structured_cdi.py
gpie/: __init__.py
gpie.egg-info/: PKG-INFO
gpie/core/: adaptive_damping.py  backend.py  linalg_utils.py  metrics.py  rng_utils.py
gpie/core/uncertain_array/: base.py  ops.py
gpie/graph/: factor.py  wave.py
gpie/graph/measurement/: amplitude_measurement.py  base.py
gpie/graph/prior/: base.py  gaussian_prior.py  sparse_prior.py  support_prior.py
gpie_inference.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
profile/: README.md  benchmark_coded_diffraction_pattern.py  benchmark_holography.py  benchmark_random_cdi.py  benchmark_utils.py
test/: test_coded_diffraction_pattern.py  test_compressive_sensing.py  test_fourier_compressive_sensing.py  test_gaussian_prior.py  test_holography.py  test_linalg_utils.py  test_ptychographic_bilinear_estimation.py  test_random_structured_matrix.py  test_rng_utils.py  test_uncertain_array.py  test_wave.py
(+18 files in other folders)
